--- a/public/assets/less/appointment.less
+++ b/public/assets/less/appointment.less
@@ -118,3 +118,6 @@
         text-align: center;
     }
 }
+div.tooltip-inner {
+    max-width: 350px;
+}
